<resources>
    <string name="app_name">SpecialFriends</string>
    <string name="facebook_app_id">1874933972566991</string>
    <string name="fb_login_protocol_scheme">fb1874933972566991</string>
    <string name="text_your_search">Buscar</string>
    <string name="name_user">Name</string>
    <string name="birthday_user">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="notes_user">Notes</string>
    <string name="save_button_text">SAVE</string>
    <string name="name_dummy_text">Name</string>
    <string name="my_name_dummy">Mi Nombre</string>
    <string name="enter_with_facebook">Enter with FaceBook</string>
    <string name="enter_with_facebook_text">Enter with Facebook</string>
    <string name="welcome_text">Welcome to</string>
    <string name="special_text">SPECIAL</string>
    <string name="friends_text">FRIENDS</string>
</resources>
