<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.inigofr.specialfriends.view.LoginActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/FrameLayout1"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        >

        <TextView
            android:id="@+id/first_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:gravity="center_vertical|center_horizontal"
            />

        <TextView
            android:id="@+id/second_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special_text"
            android:layout_below="@+id/first_txt"
            android:gravity="center_vertical|center_horizontal"
            />

        <TextView
            android:id="@+id/third_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends_text"
            android:layout_below="@+id/second_txt"
            android:gravity="center_vertical|center_horizontal"
            />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/fb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/enter_with_facebook"
            android:textColor="@color/white"
            android:theme="@style/RaisedButtonDark"
            android:textStyle="bold" />
    </FrameLayout>

</RelativeLayout>
