<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar_user"
        layout="@layout/action_toolbar_user"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_user"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        tools:context="mx.inigofr.specialfriends.view.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageProfilePictureDetail"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15dp"
                android:src="@drawable/user_icon"
                app:civ_border_color="@color/icon_border_color_2"
                app:civ_border_width="4dp" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circleImageProfilePictureDetail"
                android:layout_centerInParent="true"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/name_user"
                android:textAlignment="center"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/birthday_user"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_birthday"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_edit_border"
                android:padding="4dp"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:textSize="20dp"

                />

            <TextView
                android:id="@+id/tv_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_birthday"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:text="@string/phone_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_phonenumber"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_edit_border"
                android:inputType="textNoSuggestions"
                android:padding="4dp"
                android:paddingStart="5dp"
                android:singleLine="true"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_phonenumber"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:text="@string/notes_user"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_notes"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/text_edit_border"
                android:gravity="top|left"
                android:lines="4"
                android:padding="4dp"
                android:paddingStart="5dp"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bt_user_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_notes"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/margin_top_20dp"
                android:background="@drawable/button_style"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/save_button_text"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:theme="@style/AppTheme.Button" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
